@@ -1,3 +1,7 @@
+2015-11-11  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gcc.target/i386/pr67265.c: New test.
+
 2015-11-10  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>
 
 	PR target/68129
